Updated image URLs

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <section class="blog-card">
         <figure class="card-image">
-            <img src="/images/illustration-article.svg" alt="Blog image">
+            <img src="./images/illustration-article.svg" alt="Blog image">
         </figure>
         <article class="card-text">
             <p class="category text-spacing">Learning</p>
@@ -27,7 +27,7 @@
         </article>
         <article class="author">
             <figure class="author-photo">
-                <img src="/images/image-avatar.webp" alt="Author Greg Hooper">
+                <img src="./images/image-avatar.webp" alt="Author Greg Hooper">
             </figure>
             <figcaption class="author-name">Greg Hooper</figcaption>
         </article>
