Updated section and author name for improved accessibility

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="blog-card">
+    <main class="blog-card">
         <figure class="card-image">
             <img src="./images/illustration-article.svg" alt="Blog image">
         </figure>
@@ -29,9 +29,9 @@
             <figure class="author-photo">
                 <img src="./images/image-avatar.webp" alt="Author Greg Hooper">
             </figure>
-            <figcaption class="author-name">Greg Hooper</figcaption>
+            <h2 class="author-name">Greg Hooper</h2>
         </article>
-    </section>
+    </main>
 </body>
 
 </html>
